Resolved some code smells